[maven-release-plugin] prepare release sfg-pet-clinic-0.0.1

--- a/pom.xml
+++ b/pom.xml
@@ -41,9 +41,13 @@
             </plugin>
         </plugins>
     </build>
-    <scm>
+    <!--<scm>
         <developerConnection>scm:git:https://github.com/prashantlangade306/sfg-pet-clinic.git</developerConnection>
       <tag>sfg-pet-clinic-0.0.1</tag>
-  </scm>
+  </scm>-->
+    <scm>
+        <url>https://github.com/prashantlangade306/sfg-pet-clinic</url>
+        <connection>scm:git:https://github.com/prashantlangade306/sfg-pet-clinic.git</connection>
+    </scm>
 
 </project>
