[maven-release-plugin] prepare release sfg-pet-clinic-0.0.1

--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,7 @@
     <scm>
         <url>https://github.com/prashantlangade306/sfg-pet-clinic</url>
         <connection>scm:git:https://github.com/prashantlangade306/sfg-pet-clinic.git</connection>
+        <tag>sfg-pet-clinic-0.0.1</tag>
     </scm>
 
 </project>
