--- a/release.properties
+++ b/release.properties
@@ -1,8 +1,8 @@
 #release configuration
-#Tue Sep 08 18:32:12 AEST 2020
+#Tue Sep 08 19:10:26 AEST 2020
 scm.tagNameFormat=@{project.artifactId}-@{project.version}
 pushChanges=true
-scm.url=scm\:git\:git@github.com\:prashantlangade306/sfg-pet-clinic.git
+scm.url=scm\:git\:https\://github.com/prashantlangade306/sfg-pet-clinic.git
 preparationGoals=clean verify
 projectVersionPolicyId=default
 remoteTagging=true
