--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     </parent>
     <groupId>guru.springframework</groupId>
     <artifactId>sfg-pet-clinic</artifactId>
-    <version>0.0.2</version>
+    <version>0.0.3-SNAPSHOT</version>
     <name>sfg-pet-clinic</name>
     <description>SGF Pet Clinic Project</description>
 
@@ -44,7 +44,7 @@
     </build>
     <scm>
         <developerConnection>scm:git:https://github.com/prashantlangade306/sfg-pet-clinic.git</developerConnection>
-      <tag>sfg-pet-clinic-0.0.2</tag>
+      <tag>sfg-pet-clinic-0.0.1</tag>
   </scm>
 
 
