adding vets page and controller. Closes #7

--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <start-class>sfgpetclinic.SfgPetClinicApplication</start-class>
+        <start-class>SfgPetClinicApplication</start-class>
     </properties>
 
     <build>
