--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,16 +1,33 @@
+# Java Maven CircleCI 2.0 configuration file
+#
+# Check https://circleci.com/docs/2.0/language-java/ for more details
+#
 version: 2
 jobs:
   build:
     docker:
-      - image: circleci/openjdk:8-jdk
+      # specify the version you desire here
+      - image: circleci/openjdk:11-browsers-legacy
+
+    # Specify service dependencies here if necessary
+    # CircleCI maintains a library of pre-built images
+    # documented at https://circleci.com/docs/2.0/circleci-images/
+    # - image: circleci/postgres:9.4
+
     working_directory: ~/repo
+
     environment:
+      # Customize the JVM maximum heap limit
       MAVEN_OPTS: -Xmx3200m
+
     steps:
       - checkout
+
+      # Download and cache dependencies
       - restore_cache:
           keys:
             - v1-dependencies-{{ checksum "pom.xml" }}
+            # fallback to using the latest cache if no exact match is found
             - v1-dependencies-
 
       - run: mvn install -DskipTests
@@ -19,7 +36,8 @@ jobs:
 
       - save_cache:
           paths:
-          - ~/.m2
+            - ~/.m2
           key: v1-dependencies-{{ checksum "pom.xml" }}
 
-      - run: mvn integration_test
+      # run tests!
+      - run: mvn integration-test
