--- a/pet-clinic-web/pom.xml
+++ b/pet-clinic-web/pom.xml
@@ -32,11 +32,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-        <!--<dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <optional>true</optional>
-        </dependency>-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
@@ -115,7 +110,7 @@
                         <groupId>org.mockito</groupId>
                         <artifactId>mockito-junit-jupiter</artifactId>
                         <version>2.17.0</version>
-                        <scope>test</scope>
+                        <scope>runtime</scope>
                     </dependency>
                 </dependencies>
             </plugin>
