--- a/pet-clinic-web/pom.xml
+++ b/pet-clinic-web/pom.xml
@@ -72,6 +72,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>xml-apis</groupId>
+            <artifactId>xml-apis</artifactId>
+            <version>1.3.04</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -111,6 +116,12 @@
                         <artifactId>mockito-junit-jupiter</artifactId>
                         <version>2.17.0</version>
                         <scope>runtime</scope>
+                    </dependency>
+                    <!-- https://mvnrepository.com/artifact/javax.validation/validation-api -->
+                    <dependency>
+                        <groupId>javax.validation</groupId>
+                        <artifactId>validation-api</artifactId>
+                        <version>2.0.1.Final</version>
                     </dependency>
                 </dependencies>
             </plugin>
